<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aashish.connect.UsersProfileActivity">

    <TextView
        android:id="@+id/users_DisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/users_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/display_name"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/users_profile_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/default_avatar"
        android:src="@drawable/default_avatar2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/users_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/users_DisplayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/default_status"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/users_friends_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_friends"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_above="@+id/users_request_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/users_request_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@color/colorPrimary"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/background_light"
        android:layout_above="@+id/users_decline_btn"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/users_decline_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:background="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/users_request_btn" />
</RelativeLayout>
